# cap-hill-explorer

./: .gitignore  README.md  agent_summary.md  config.py  encrypt.mjs  pyproject.toml  refresh.py  seed_sample.py  snapshot.py  source_wishlist.md
.github/workflows/: deploy.yml
adapters/: base.py  chs_blog.py  do206.py  http.py  ical.py  meetup.py  registry.py  rss.py  ticketmaster.py
core/: categorize.py  dedup.py  geo.py  models.py  normalize.py  store.py
web/: app.py
web/static/: ai.txt  index.html  manifest.webmanifest  robots.txt  sw.js
