[project]
name = "cap-hill-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.138.2",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "icalendar>=7.2.0",
    "python-dateutil>=2.9.0.post0",
    "rapidfuzz>=3.14.5",
]
